refactor structure, setup a demo vm. Add documentatino
Signed-off-by: Kris Barkar <kristin.barkardottir@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
-terraform/*.tfplan
-terraform/*.hcl
-terraform/tfplan.json
-terraform/*.tfstate*
-terraform/.terraform*
+**/*.tfplan
+**/*.hcl
+**/*tfplan.json
+**/*.tfstate*
+**/.terraform*
+**/compute-instance.json
+**/.ssh*
