--- a/sec-mgmt/kubernetes/demo-secrets/templates/serviceaccount.yaml
+++ b/sec-mgmt/kubernetes/demo-secrets/templates/serviceaccount.yaml
@@ -4,5 +4,5 @@ metadata:
   name: {{ .Values.adminAccount.name }}
   namespace: {{ .Values.adminAccount.name }}
   annotations:
-    iam.gke.io/gcp-service-account: {{ .Values.google_service_account | default "gke-workload" }}@{{ .Values.project_id | default "changeme" }}.iam.gserviceaccount.com
+    iam.gke.io/gcp-service-account: readonly-secrets@kba-sandbox.iam.gserviceaccount.com
 
