--- a/sec-mgmt/kubernetes/demo-secrets/templates/secret-provider.yaml
+++ b/sec-mgmt/kubernetes/demo-secrets/templates/secret-provider.yaml
@@ -1,11 +1,12 @@
 apiVersion: secrets-store.csi.x-k8s.io/v1
 kind: SecretProviderClass
+
 metadata:
   name: app-secrets
-  namespace: {{ .Values.adminAccount.name }}
+  namespace: admin
 spec:
   provider: gcp
   parameters:
     secrets: |
-      - resourceName: "projects/781365677071/secrets/bq-readonly-key/versions/latest"
-        path: "/var/secrets/good1.txt"
+      - resourceName: "projects/kba-sandbox/secrets/bq-readonly-key/versions/latest"
+        path: "good1.txt"
