move kustomization file tune kustomize
Signed-off-by: Kris Barkar <kristin.barkardottir@civicplus.com>

--- a/argocd/manifests/bootstrap/argocd/applications/nginx.yaml
+++ b/argocd/manifests/bootstrap/argocd/applications/nginx.yaml
@@ -13,7 +13,7 @@ spec:
     path: argocd/kustomize/apps/nginx
   destination:
     server: https://kubernetes.default.svc
-    namespace: default
+    namespace: nginx
   syncPolicy:
     automated:
       selfHeal: true
