--- a/argocd/manifests/bootstrap/argocd/install.yaml
+++ b/argocd/manifests/bootstrap/argocd/install.yaml
@@ -16718,6 +16718,8 @@ metadata:
     app.kubernetes.io/name: argocd-cm
     app.kubernetes.io/part-of: argocd
   name: argocd-cm
+data:
+  kustomize.buildOptions: --load-restrictor LoadRestrictionsNone
 ---
 apiVersion: v1
 kind: ConfigMap
