Add fluxcd setup Setup csi driver
Signed-off-by: Kris Barkar <kristin.barkardottir@civicplus.com>

--- a/terraform/fluxcd/Makefile
+++ b/terraform/fluxcd/Makefile
@@ -1,6 +1,9 @@
 ## Flux makefile
 .DEFAULT_GOAL := help
 TF_VAR_project_id := $(shell gcloud config get-value project)
+TF_VAR_project_name = fluxcd
+TF_VAR_cluster_name = $(TF_VAR_project_id)-$(TF_VAR_project_name)-gke
+
 .PHONY: help
 help: ## Help
 	@grep -E '^[a-zA-Z\\._-]+:.*?## .*$$' $(MAKEFILE_LIST) | sort | awk 'BEGIN {FS = ":.*?## "}; {printf "\033[32m%-30s\033[0m %s\n", $$1, $$2}'
