--- a/fluxcd/clusters/sandbox/common.yaml
+++ b/fluxcd/clusters/sandbox/common.yaml
@@ -1,14 +1,14 @@
----
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: podinfo
+  name: nginx
   namespace: flux-system
 spec:
-  interval: 5m0s
-  path: ./kustomize
+  interval: 1m0s
+  path: ./fluxcd/kustomize/common/nginx
   prune: true
   sourceRef:
     kind: GitRepository
-    name: podinfo
-  targetNamespace: default
+    name: flux-demo
+  targetNamespace: nginx
+
