change kustomize structure and add a new app
Signed-off-by: Kris Barkar <kristin.barkardottir@civicplus.com>

--- a/fluxcd/clusters/sandbox/infrastructure.yaml
+++ b/fluxcd/clusters/sandbox/infrastructure.yaml
@@ -11,3 +11,17 @@ spec:
     kind: GitRepository
     name: flux-demo
   targetNamespace: redis
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: linkerd
+  namespace: flux-system
+spec:
+  interval: 1m0s
+  path: ./fluxcd/kustomize/infrastructure/linkerd
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-demo
+  targetNamespace: linkerd
