add namespace to redis
Signed-off-by: Kris Barkar <kristin.barkardottir@civicplus.com>

--- a/fluxcd/kustomize/infrastructure/redis/base/kustomization.yaml
+++ b/fluxcd/kustomize/infrastructure/redis/base/kustomization.yaml
@@ -1,6 +1,8 @@
 kind: ""
 apiversion: ""
+namespace: redis
 resources:
+- namespace.yaml
 - configmap.yaml
 - health-configmap.yaml
 - redis-master-statefulset.yaml
