--- a/fluxcd/clusters/sandbox/flux-system/gotk-gitrepository-sync.yaml
+++ b/fluxcd/clusters/sandbox/flux-system/gotk-gitrepository-sync.yaml
@@ -10,3 +10,16 @@ spec:
   secretRef:
     name: flux-system
   url: ssh://git@github.com/barkardk/gitops-demo-flux
+---
+apiVersion: source.toolkit.fluxcd.io/v1
+kind: GitRepository
+metadata:
+  name: dev
+  namespace: flux-system
+spec:
+  interval: 1m0s
+  ref:
+    branch: dev
+  secretRef:
+    name: flux-system
+  url: ssh://git@github.com/barkardk/gitops-demo-flux
