Cleanup in the pipelines and add new cluster setup
Signed-off-by: Kris Barkar <kristin.barkardottir@civicplus.com>

--- a/argocd/kustomize/apps/nginx/base/service.yaml
+++ b/argocd/kustomize/apps/nginx/base/service.yaml
@@ -3,11 +3,11 @@ kind: Service
 metadata:
   name: nginx
   labels:
-    run: nginx
+    app: nginx
 spec:
   ports:
     - port: 80
       protocol: TCP
   type: LoadBalancer
   selector:
-    run: nginx
+    app: nginx
